--- a/templates/xhtml-templates/10.1.1-home-flags-APAC.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-APAC.html
@@ -42,7 +42,7 @@
 					<div class="acc-menu-item"><a href="/login?redirectto=%2f"><span>Sign In</span></a></div>
 						<div id="no-js-mnu" class="acc-menu-item no-js countries-form">
 
-						<form id="uk-currency-sel" class="no-js" action="#" method="get" style="display:none">
+						<form id="uk-currency-sel" action="" class="no-js" method="get" style="display:none">
 						<select name="countries-opt">
 							<optgroup label="Countries">
 								<option value="UK" selected="selected">United Kingdom</option>
@@ -90,8 +90,8 @@
 				<div class="clear"></div>
 			</div>
 			<div id="countries-selector" style="display:block">
-				<div id="country-code">UK</div>
-				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="UK" /></div>
+				<div id="country-code" title="UK">UK</div>
+				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="Flag" title="UK" /></div>
 				<div id="country-changer"><img src="../img/flags/button.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
 			<div class="clear"></div>
@@ -108,75 +108,75 @@
 				<div id="js-countries-inner">
 					<table class="flags" cellspacing="5" border="0">
 						<tr>
-							<td><img id="flag-image-0" src="../img/flags/UK.png" alt="UK" /></td>
+							<td><img id="flag-image-0" src="../img/flags/UK.png" alt="Flag" /></td>
 							<td><span id="flag-label-0">United Kingdom</span></td>
-							<td><img id="flag-image-1" src="../img/flags/IN.png" alt="IN" /></td>
+							<td><img id="flag-image-1" src="../img/flags/IN.png" alt="Flag" /></td>
 							<td><span id="flag-label-1">India</span></td>
-							<td><img id="flag-image-2" src="../img/flags/RU.png" alt="RU" /></td>
+							<td><img id="flag-image-2" src="../img/flags/RU.png" alt="Flag" /></td>
 							<td><span id="flag-label-2">Russia</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-3" src="../img/flags/NZ.png" alt="NZ" /></td>
+							<td><img id="flag-image-3" src="../img/flags/NZ.png" alt="Flag" /></td>
 							<td><span id="flag-label-3">New Zealand</span></td>
-							<td><img id="flag-image-4" src="../img/flags/ID.png" alt="ID" /></td>
+							<td><img id="flag-image-4" src="../img/flags/ID.png" alt="Flag" /></td>
 							<td><span id="flag-label-4">Indonesia</span></td>
-							<td><img id="flag-image-5" src="../img/flags/WS.png" alt="WS" /></td>
+							<td><img id="flag-image-5" src="../img/flags/WS.png" alt="Flag" /></td>
 							<td><span id="flag-label-5">Samoa</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-6" src="../img/flags/AU.png" alt="AU" /></td>
+							<td><img id="flag-image-6" src="../img/flags/AU.png" alt="Flag" /></td>
 							<td><span id="flag-label-6">Australia</span></td>
-							<td><img id="flag-image-7" src="../img/flags/JP.png" alt="JP" /></td>
+							<td><img id="flag-image-7" src="../img/flags/JP.png" alt="Flag" /></td>
 							<td><span id="flag-label-7">Japan</span></td>
-							<td><img id="flag-image-8" src="../img/flags/SG.png" alt="SG" /></td>
+							<td><img id="flag-image-8" src="../img/flags/SG.png" alt="Flag" /></td>
 							<td><span id="flag-label-8">Singapore</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-9" src="../img/flags/BD.png" alt="BD" /></td>
+							<td><img id="flag-image-9" src="../img/flags/BD.png" alt="Flag" /></td>
 							<td><span id="flag-label-9">Bangladesh</span></td>
-							<td><img id="flag-image-10" src="../img/flags/KR.png" alt="KR" /></td>
+							<td><img id="flag-image-10" src="../img/flags/KR.png" alt="Flag" /></td>
 							<td><span id="flag-label-10">Korea</span></td>
-							<td><img id="flag-image-11" src="../img/flags/TH.png" alt="TH" /></td>
+							<td><img id="flag-image-11" src="../img/flags/TH.png" alt="Flag" /></td>
 							<td><span id="flag-label-11">Thailand</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-12" src="../img/flags/MY.png" alt="MY" /></td>
+							<td><img id="flag-image-12" src="../img/flags/MY.png" alt="Flag" /></td>
 							<td><span id="flag-label-12">Borneo</span></td>
-							<td><img id="flag-image-13" src="../img/flags/MY.png" alt="MY" /></td>
+							<td><img id="flag-image-13" src="../img/flags/MY.png" alt="Flag" /></td>
 							<td><span id="flag-label-13">Malaysia</span></td>
-							<td><img id="flag-image-14" src="../img/flags/TO.png" alt="TO" /></td>
+							<td><img id="flag-image-14" src="../img/flags/TO.png" alt="Flag" /></td>
 							<td><span id="flag-label-14">Tonga</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-15" src="../img/flags/CN.png" alt="CN" /></td>
+							<td><img id="flag-image-15" src="../img/flags/CN.png" alt="Flag" /></td>
 							<td><span id="flag-label-15">China</span></td>
-							<td><img id="flag-image-16" src="../img/flags/KP.png" alt="KP" /></td>
+							<td><img id="flag-image-16" src="../img/flags/KP.png" alt="Flag" /></td>
 							<td><span id="flag-label-16">North Korea</span></td>
-							<td><img id="flag-image-17" src="../img/flags/AF.png" alt="AF" /></td>
+							<td><img id="flag-image-17" src="../img/flags/AF.png" alt="Flag" /></td>
 							<td><span id="flag-label-17">Africa</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-18" src="../img/flags/CK.png" alt="CK" /></td>
+							<td><img id="flag-image-18" src="../img/flags/CK.png" alt="Flag" /></td>
 							<td><span id="flag-label-18">Cook Islands</span></td>
-							<td><img id="flag-image-19" src="../img/flags/PK.png" alt="PK" /></td>
+							<td><img id="flag-image-19" src="../img/flags/PK.png" alt="Flag" /></td>
 							<td><span id="flag-label-19">Pakistan</span></td>
-							<td><img id="flag-image-20" src="../img/flags/EU.png" alt="EU" /></td>
+							<td><img id="flag-image-20" src="../img/flags/EU.png" alt="Flag" /></td>
 							<td><span id="flag-label-20">Europe</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-21" src="../img/flags/FJ.png" alt="FJ" /></td>
+							<td><img id="flag-image-21" src="../img/flags/FJ.png" alt="Flag" /></td>
 							<td><span id="flag-label-21">Fiji</span></td>
-							<td><img id="flag-image-22" src="../img/flags/PG.png" alt="PG" /></td>
+							<td><img id="flag-image-22" src="../img/flags/PG.png" alt="Flag" /></td>
 							<td><span id="flag-label-22">Papua New Guinea</span></td>
-							<td><img id="flag-image-23" src="../img/flags/NA.png" alt="NA" /></td>
+							<td><img id="flag-image-23" src="../img/flags/NA.png" alt="Flag" /></td>
 							<td><span id="flag-label-23">North America</span></td>
 						</tr>
 						<tr>
-							<td><img id="flag-image-24" src="../img/flags/HK.png" alt="HK" /></td>
+							<td><img id="flag-image-24" src="../img/flags/HK.png" alt="Flag" /></td>
 							<td><span id="flag-label-24">Hong Kong</span></td>
-							<td><img id="flag-image-25" src="../img/flags/PH.png" alt="PH" /></td>
+							<td><img id="flag-image-25" src="../img/flags/PH.png" alt="Flag" /></td>
 							<td><span id="flag-label-25">Philippines</span></td>
-							<td><img id="flag-image-26" src="../img/flags/SA.png" alt="SA" /></td>
+							<td><img id="flag-image-26" src="../img/flags/SA.png" alt="Flag" /></td>
 							<td><span id="flag-label-26">South America</span></td>
 						</tr>
 	
