--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -81,10 +81,10 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			<div id="countries-selector" style="display:none">
-				<div id="country-code">UK</div>
-				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="UK" /></div>
-				<div id="country-changer"><img src="../img/flags/button.png" width="11" height="11" alt="Change" title="Change" /></div>
+			<div id="countries-selector" style="display:block">
+				<div id="country-code" title="UK">UK</div>
+				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="Flag" title="UK" /></div>
+				<div id="country-changer"><img id="country-button" src="../img/flags/button-gray.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
 			<!-- show and hide the correct components depending on JavaScript availability -->
 			<script>
