fixed non js functionality

--- a/templates/xhtml-templates/10.1.1-home-flags-APAC.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-APAC.html
@@ -42,7 +42,7 @@
 					<div class="acc-menu-item"><a href="/login?redirectto=%2f"><span>Sign In</span></a></div>
 						<div id="no-js-mnu" class="acc-menu-item no-js countries-form">
 
-						<form id="uk-currency-sel" action="" class="no-js" method="get" style="display:none">
+						<form id="uk-currency-sel" action="" class="no-js" method="get" style="display:block">
 						<select name="countries-opt">
 							<optgroup label="Countries">
 								<option value="UK" selected="selected">United Kingdom</option>
@@ -89,13 +89,13 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			<div id="countries-selector" style="display:block">
+			<div id="countries-selector" style="display:none">
 				<div id="country-code" title="UK">UK</div>
 				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="Flag" title="UK" /></div>
 				<div id="country-changer"><img id="country-button" src="../img/flags/button-gray.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
 			<div class="clear"></div>
-			<div id="currency-selector" style="display:block">
+			<div id="currency-selector" style="display:none">
 				<div id="currency-code">USD</div>
 				<div id="currency-changer"><img id="currency-button" src="../img/flags/button-gray.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
