--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -30,7 +30,13 @@
 					<span class="cat-title"><a  class="top-level" href="#" title="About">About</a></span> <span class="cat-title"><a class="top-level" href="#" title="Training &amp; Advice">Training &amp; Advice</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Sponsorship &amp; Partners">Sponsorship &amp; Partners</a></span> <span class="cat-title"><a  class="top-level" href="#" title="News &amp; Events">News &amp; Events</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Videos">Videos</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Shop">Shop</a></span> </div>
 			</div>
 			
-			<!-- edited markup for menu -->
+			<!-- 
+			*
+			*
+			*  edited markup for menu 
+			*
+			*
+			*-->
 			<div id="account-menu">
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span class="pound">&pound;3619.92</span></a></div>
@@ -93,7 +99,7 @@
 			</script>
 			<div id="js-countries">
 				<div id="js-countries-inner">
-					<table class="flags" cellspacing="5" border="0">
+					<table class="flags" cellspacing="4" border="0">
 						<tr>
 							<td><img id="flag-image-0" src="../img/flags/UK.png" alt="UK" /></td>
 							<td><span id="flag-label-0">United Kingdom</span></td>
@@ -170,7 +176,13 @@
 					</table>
 				</div>
 			</div>
-			<!-- end of edit -->
+			<!-- 
+			*
+			*
+			*  End of edit
+			*
+			*
+			*-->
 			
 			<div id="mega-dropdown"> 
 				<!-- example menu -->
